--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <div class="navbar">
+        <img src="/resources/logo.svg" alt="logo">
         <a href="#">"Cudium"</a>
     </div>
 
     <div class="hero-section">
         <div class="container">
             <hi>International transaction made easy</hi>
-            
+            <p>Send, receive, buy or sell in foreign currency and convert your local currency. All we’re about is making your international transactions seamless.</p>
     </div>
-
+    <button class="cta-button">join waitlist</button>
+    </div>
+    <div class="top-image">
+        <img src="./resources/mobile1.svg" alt="mobile-phone">
+    </div>
     
 </body>
 </html>
