--- a/index.html
+++ b/index.html
@@ -11,21 +11,41 @@
     <title>Cudium</title>
 </head>
 <body>
-    <div class="navbar">
-        <img src="/resources/logo.svg" alt="logo">
-        <a href="#">Cudium</a>
-    </div>
+   <header>
+       <div class="logo-container">
+        <img src="/resources/logo.svg" alt="logo" class="logo-image"></logo-image>
+       <span class="logo-text">Cudium</span>
+       </div>
 
-    <div class="hero-section">
-        <div class="container">
-            <hi>International transaction made easy</hi>
+   </header>
+
+
+<section class="hero">
+        <div class="flex-container">
+            <div class="text-content">
+            <h1>International transaction made easy</h1>
             <p>Send, receive, buy or sell in foreign currency and convert your local currency. All we’re about is making your international transactions seamless.</p>
-    </div>
-    <button class="cta-button">join waitlist</button>
-    </div>
-    <div class="top-image">
+            <button class="cta-button">join waitlist</button>
+        </div>
+    <div class="hero-images">
         <img src="./resources/mobile1.svg" alt="mobile-phone">
     </div>
+    </section>
+
+
+
+
+<section class=""
+    <div class="coins">
+        <img src="" alt="Coin 1">
+        <img src="coin2.png" alt="Coin 2">
+    </div>
+</div>
+
+<div class="features-section">
+    <h2>Create free foreign accounts</h2>
+    <p>Create free foreign accounts that allow you to carry out international transactions with ease. Join us today and enjoy seamless and secure transactions.</p>
+</div>
     
 </body>
 </html>
