--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <section class="hero">
         <div class="flex-container">
             <div class="text-content">
-            <h1>International transaction made easy</h1>
+            <h1>International transaction <span>made easy</span></h1>
+            <img src="./resources/Vector 20.png">
             <p>Send, receive, buy or sell in foreign currency and convert your local currency. All we’re about is making your international transactions seamless.</p>
             <button class="cta-button">join waitlist</button>
         </div>
