--- a/index.html
+++ b/index.html
@@ -36,16 +36,23 @@
 
 
 
-<section class=""
-    <div class="coins">
-        <img src="" alt="Coin 1">
-        <img src="coin2.png" alt="Coin 2">
+<section class="foreign-section">
+    <div class="currency-icons">
+        <img src="./resources/image 5.svg" alt="Coin 1" class="coin 1">
+        <img src="./resources/image 7.svg" alt="Coin 2" class="coin 2">
     </div>
-</div>
 
 <div class="features-section">
-    <h2>Create free foreign accounts</h2>
-    <p>Create free foreign accounts that allow you to carry out international transactions with ease. Join us today and enjoy seamless and secure transactions.</p>
+    <h2>Create free foreign accounts that allows you carry out international transactions.</h2>
+    <p>Use your account details to send, receive and exchange foreign currencies at low costs. Create an account and get a virtual USD card for free.
+        </p>
+        <ul>
+            <li>make payment using cudium dollar cards</li>
+            <li>exchange local currency</li>
+            <li>send and recieve money quickly</li>
+            <li>Track transactions</li>
+
+        </ul>
 </div>
     
 </body>
