--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 
-<section class="foreign-section">
+<section class="rectangle-section">
     <div class="currency-icons">
         <img src="./resources/image 5.svg" alt="Coin 1" class="coin 1">
         <img src="./resources/image 7.svg" alt="Coin 2" class="coin 2">
@@ -44,7 +44,7 @@
 
 <div class="features-section">
     <h2>Create free foreign accounts that allows you carry out international transactions.</h2>
-    <p>Use your account details to send, receive and exchange foreign currencies at low costs. Create an account and get a virtual USD card for free.
+    <p class="p2">Use your account details to send, receive and exchange foreign currencies at low costs. Create an account and get a virtual USD card for free.
         </p>
         <ul>
             <li>make payment using cudium dollar cards</li>
@@ -54,6 +54,39 @@
 
         </ul>
 </div>
+</section>
+
+<section class="rely-section">
+    <div class="rely">
+    <h3> You can always rely on us</h3>
+    <p class="p3"> With multi-currency accounts, you can send, receive and manage money with ease</p>
     
+    <div class="card">
+      <div class="card-details">
+        <p class="text-title">Zero Limitation</p>
+        <p class="text-body">You can pay for any product or service in the world without physically holding the currency and certainly without moving a muscle (well, just your fingers).</p>
+      </div>
+    </div>
+
+     <div class="card">
+        <div class="card-details">
+        <p class="text-title">Global</p>
+        <p class="text-body">>Wherever you may be, whatever service you need in whatever currency, you can always rely on Cudium. You should feel at ease whenever you make international transactions.</p>
+      </div>
+     </div>
+     <div class="card">
+      <div class="card-details">
+        <p class="text-title">Easy Transaction</p>
+        <p class="text-body">You don't have to worry about complex payment processes. Tailored to make your international transactions smooth, you will think of us whenever you hear the word "Currency"</p>
+      </div>
+     </div>
+     <div class="card">
+      <div class="card-details">
+        <p class="text-title">Send Funds</p>
+        <p class="text-body">Transferring funds on Cudium doesn't come with the tag "challenging". It's as simple as hitting the send button.</p>
+      </div>
+      </div> 
+                
+    </div>
 </body>
 </html>
