--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
    </header>
 
-
 <section class="hero">
         <div class="flex-container">
             <div class="text-content">
@@ -52,8 +51,8 @@
 </div>
 </section>
 <div class="section">
-        <div class="content">
-            <h1>You can always rely on us</h1>
+        <div class="content2">
+            <h3>You can always rely on us</h3> 
             <p>With multi-currency accounts, you can send, receive and manage money with ease</p>
         </div>
         <div class="card-container">
@@ -62,29 +61,40 @@
                     
                     <img src="/resources/Vector (2).png" alt="Zero Limitations Icon">
                 </div>
-                <h2>Zero Limitations</h2>
-                <p>You can pay for any product or service in the world without physically holding the currency and certainly without moving a muscle (well, just your fingers).</p>
+                <h4>Zero Limitations</h4>
+                <p class="p3"> You can pay for any product or service in the world without physically holding the currency and certainly without moving a muscle (well, just your fingers).</p>
             </div>
-            <div class="card">
+            <div class="card-1">
                 <div class="icon">
                     <img src="resources/Frame 1483.png" alt="Global Icon">
                 </div>
-                <h2>Global</h2>
-                <p>Wherever you may be, whatever service you need in whatever currency, you can always rely on us. You should feel at ease whenever you make international transactions.</p>
+                <h4>Global</h4>
+                <p class="p3">Wherever you may be, whatever service you need in whatever currency, you can always rely on us. You should feel at ease whenever you make international transactions.</p>
             </div>
-            <div class="card">
+            <div class="card-1">
                 <div class="icon">
-                    <img src="resources/Vector (3).png" alt="Easy Transaction Icon">
+                    <img src="resources/Frame 1483 (1).svg" alt="Easy Transaction Icon">
                 </div>
-                <h2>Easy Transaction</h2>
-                <p>You don’t have to worry about complex payment processes or hidden charges. It’s easy, smooth, and transparent.</p>
+                <h4>Easy Transaction</h4>
+                <p class="p3">You don’t have to worry about complex payment processes or hidden charges. It’s easy, smooth, and transparent.</p>
             </div>
             <div class="card">
                 <div class="icon">
                     <img src="resources/Vector (3).png" alt="Send Funds Icon">
                 </div>
-                <h2>Send Funds</h2>
-                <p>Transfer funds to anyone, anywhere in the world with a few clicks, keeping it simple and fast.</p>
+                <h4>Send Funds</h4>
+                <p class="p3">Transfer funds to anyone, anywhere in the world with a few clicks, keeping it simple and fast.</p>
             </div>
         </div>
     </div>
+<section class="how-it-works">
+    <h5>How it Works</h5>
+    <div class="steps-container">
+        <div class="step">
+            <i class="icon2"></i>
+        </div>
+
+    </div>
+</section>
+</body>
+</html>
