--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <h6> Ready to Join Us</h6>
         <p> Join others an be among the first to know when we finally launch</p>
         <form>
-            <button type="submit">Subscribe</button>
+            <button class="cta-button" type="submit>Join waitlist</button>
         </form>
     </section>
 
