--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
         <div class="step">
             <i class="icon2"><img src="resources/Group 13.svg"></i>
             <h6>register in minutes</h6>
-            <p>Sign up stress free. It will onlt take a few minutes to get started.</p>
+            <p class="p6">Sign up stress free. It will onlt take a few minutes to get started.</p>
         </div>
         <div class="step">
             <i class="icon2"><img src="resources/Group 12.svg"></i>
             <h6>Complete KYC verification</h6>
-            <p>complete your verification with your government-issed ID</p>
+            <p class="p6">complete your verification with your government-issed ID</p>
         </div>
         <div class="step">
             <i class="icon2"><img src="resources/Group 14.svg"></i>
             <h6>Get your virtual account</h6>
-            <p>Now you can send and receive foreign currencies with your account</p>
+            <p class="p6">Now you can send and receive foreign currencies with your account</p>
         </div>
 
     </section>
@@ -111,7 +111,7 @@
         <h6> Ready to Join Us</h6>
         <p> Join others an be among the first to know when we finally launch</p>
         <form>
-            <button class="cta-button" type="submit>Join waitlist</button>
+            <button class="cta-button" type="submit">Join waitlist</button>
         </form>
     </section>
 
