--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="steps-container">
         <div class="step">
             <i class="icon2"><img src="resources/Group 13.svg"></i>
-            <h6>register in minutes</h6>
+            <h6>Register in minutes</h6>
             <p class="p6">Sign up stress free. It will onlt take a few minutes to get started.</p>
         </div>
         <div class="step">
