review: code review

--- a/index.html
+++ b/index.html
@@ -11,24 +11,22 @@
     <title>Cudium</title>
 </head>
 <body>
-   <header>
-       <div class="logo-container">
-        <img src="/resources/logo.svg" alt="logo" class="logo-image"></logo-image>
+   <header  class="logo-container">
+        <img src="/resources/logo.svg" alt="logo" class="logo-image"/>
        <span class="logo-text">Cudium</span>
-       </div>
-
    </header>
 
 <section class="hero">
-        <div class="flex-container">
-            <div class="text-content">
+    <div class="flex-container">
+        <div class="text-content">
             <h1>International transaction <span>made easy</span></h1>
             <img src="./resources/Vector 20.png">
             <p>Send, receive, buy or sell in foreign currency and convert your local currency. All we’re about is making your international transactions seamless.</p>
-            <button class="cta-button">join waitlist</button>
+            <button class="cta-button">Join waitlist</button>
         </div>
-    <div class="hero-images">
-        <img src="./resources/mobile1.svg" alt="mobile-phone">
+        <div class="hero-images">
+            <img src="./resources/mobile1.svg" alt="mobile-phone">
+        </div>
     </div>
     </section>
 <section class="rectangle-section">
@@ -110,9 +108,9 @@
     <section class="ready">
         <h6> Ready to Join Us</h6>
         <p> Join others an be among the first to know when we finally launch</p>
-        <form>
+  
             <button class="cta-button" type="submit">Join waitlist</button>
-        </form>
+      
     </section>
 
 </section>
