--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     </section>
 <section class="rectangle-section">
     <div class="currency-icons">
-        <img src="./resources/image 5.svg" alt="Coin 1" class="coin 1">
-        <img src="./resources/image 7.svg" alt="Coin 2" class="coin 2">
+        <img src="./resources/image 5.svg" alt="Coin 1" class="coin1">
+        <img src="./resources/dollar coin.png" alt="coin 3" class="coin3">
+        <img src="./resources/image 7.svg" alt="Coin 2" class="coin2">
     </div>
 
 <div class="features-section">
@@ -40,10 +41,10 @@
     <p class="p2">Use your account details to send, receive and exchange foreign currencies at low costs. Create an account and get a virtual USD card for free.
         </p>
         <ul>
-            <li>make payment using cudium dollar cards</li>
-            <li>exchange local currency</li>
-            <li>send and recieve money quickly</li>
-            <li>Track transactions</li>
+            <li src="./resources/bullet.png" alt="">make payment using cudium dollar cards</li>
+            <li img src="./resources/bullet.png" alt="">exchange local currency</li>
+            <li img src="./resources/bullet.png" alt=""> send and recieve money quickly</li>
+            <li img src="./resources/bullet.png" alt=""> Track transactions</li>
 
         </ul>
 </div>
